--- a/app/views/hyrax/base/iiif_viewers/_avalon.html.erb
+++ b/app/views/hyrax/base/iiif_viewers/_avalon.html.erb
@@ -16,8 +16,9 @@ See the License for the specific language governing permissions and
 limitations under the License.
 ---  END LICENSE_HEADER BLOCK  ---
 %>
-<%= javascript_pack_tag 'react-iiif-media-player-pack' %>
-<%= stylesheet_pack_tag 'react-iiif-media-player-pack' %>
+<%# FIXME: Load the avalon react iiif viewer JS and CSS %>
+<%#= javascript_pack_tag 'react-iiif-media-player-pack' %>
+<%#= stylesheet_pack_tag 'react-iiif-media-player-pack' %>
 
 <div id="iiif-manifest-url" data-manifest-url="<%= main_app.polymorphic_path [main_app, :manifest, presenter], { locale: nil } %>"></div>
 <div id="react-mounter"></div>
