Add missing stylesheets for player.

--- a/lib/generators/hyrax/iiif_av/templates/_avalon.html.erb
+++ b/lib/generators/hyrax/iiif_av/templates/_avalon.html.erb
@@ -18,5 +18,6 @@ limitations under the License.
 %>
 <% content_for(:head) do %>
   <%= javascript_pack_tag 'application' %>
+  <%= stylesheet_pack_tag 'application' %>
 <% end %>
 <%= react_component("AvalonIiifPlayer", { manifestUrl: main_app.polymorphic_path([main_app, :manifest, presenter], { locale: nil }) }) %>
